--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p class="text-sm text-gray-500">2015 - 2019</p>
                     <h3 class="text-xl font-semibold text-gray-900 mt-1">B.S. in Computer Science and Information Technology</h3>
                     <p class="mt-1 text-gray-500">Tribhuvan University, Nepal</p>
-                    <p class="mt-2 text-gray-600">Graduated with High Honors. Member of the Computer Science Honors Society.</p>
+<!--                     <p class="mt-2 text-gray-600">Graduated with High Honors. Member of the Computer Science Honors Society.</p> -->
                 </div>
             </div>
         </section>
