--- a/index.html
+++ b/index.html
@@ -4,6 +4,135 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pujan Thapa - Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body class="antialiased">
+
+    <!-- Header & Navigation -->
+    <header class="bg-primary-bg/80 backdrop-blur-md sticky top-0 z-50 border-b border-secondary-border">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold text-primary-text">Pujan Thapa</a>
+            <nav class="hidden md:flex items-center space-x-6">
+                <a href="#experience" class="text-secondary-text hover:text-accent transition-colors" data-translate-key="nav_experience">Experience</a>
+                <a href="#projects" class="text-secondary-text hover:text-accent transition-colors" data-translate-key="nav_projects">Projects</a>
+                <a href="#education" class="text-secondary-text hover:text-accent transition-colors" data-translate-key="nav_education">Education</a>
+                <a href="#research" class="text-secondary-text hover:text-accent transition-colors" data-translate-key="nav_research">Research</a>
+                <a href="#contact" class="text-secondary-text hover:text-accent transition-colors" data-translate-key="nav_contact">Contact</a>
+                
+                <!-- Language and Theme Toggles -->
+                <div class="flex items-center space-x-4 border-l border-secondary-border pl-6">
+                    <div id="language-switcher" class="flex items-center space-x-2">
+                         <button class="lang-btn" data-lang="en">EN</button>
+                         <button class="lang-btn" data-lang="it">IT</button>
+                         <button class="lang-btn" data-lang="ne">NE</button>
+                    </div>
+                    <button id="theme-toggle" class="text-secondary-text hover:text-accent">
+                        <svg id="theme-icon-sun" class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+                        <svg id="theme-icon-moon" class="w-6 h-6 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+                    </button>
+                </div>
+            </nav>
+            <button id="mobile-menu-button" class="md:hidden text-primary-text focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+            </button>
+        </div>
+        <!-- Mobile Menu -->
+        <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
+            <a href="#experience" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_experience_mob">Experience</a>
+            <a href="#projects" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_projects_mob">Projects</a>
+            <a href="#education" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_education_mob">Education</a>
+            <a href="#research" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_research_mob">Research</a>
+            <a href="#contact" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_contact_mob">Contact</a>
+            <a href="cv.pdf" download class="block mt-4 bg-accent text-white text-center px-4 py-2 rounded-lg hover:bg-accent-hover" data-translate-key="download_cv_mob">Download CV</a>
+             <div class="flex items-center justify-center space-x-4 mt-4 pt-4 border-t border-secondary-border">
+                <div id="language-switcher-mob" class="flex items-center space-x-2">
+                     <button class="lang-btn" data-lang="en">EN</button>
+                     <button class="lang-btn" data-lang="it">IT</button>
+                     <button class="lang-btn" data-lang="ne">NE</button>
+                </div>
+                <button id="theme-toggle-mob" class="text-secondary-text hover:text-accent">
+                    <!-- Icons will be controlled by JS -->
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <main class="container mx-auto px-6 py-16">
+
+        <!-- Hero Section -->
+        <section id="hero" class="flex flex-col md:flex-row items-center justify-between space-y-8 md:space-y-0 md:space-x-12">
+            <div class="md:w-1/2 text-center md:text-left">
+                <h1 class="text-4xl md:text-5xl font-bold text-primary-text leading-tight" data-translate-key="hero_title">AI/Machine Learning Engineer & Data Scientist</h1>
+                <p class="mt-4 text-lg text-secondary-text" data-translate-key="hero_subtitle">
+                    I design and deploy intelligent systems, build scalable data pipelines, and develop robust Python backends. Passionate about transforming complex data into actionable insights and creating AI-driven solutions that are both powerful and efficient.
+                </p>
+                <div class="mt-8 flex justify-center md:justify-start space-x-4">
+                    <!-- Social Media Links -->
+                    <a href="https://github.com/iampujan" class="text-tertiary-text hover:text-accent transition-colors" aria-label="GitHub">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12.014c0 4.43 2.864 8.163 6.838 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.03-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.378.203 2.398.1 2.65.64.7 1.028 1.595 1.028 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12.014C22 6.477 17.523 2 12 2z" clip-rule="evenodd" /></svg>
+                    </a>
+                    <a href="https://www.linkedin.com/in/iampujan/" class="text-tertiary-text hover:text-accent transition-colors" aria-label="LinkedIn">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z" /></svg>
+                    </a>
+                    <a href="https://x.com/iampujan20" class="text-tertiary-text hover:text-accent transition-colors" aria-label="Twitter">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" /></svg>
+                    </a>
+                    <a href="https://medium.com/@iampujan" class="text-tertiary-text hover:text-accent transition-colors" aria-label="Medium">
+                        <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.94 6a.54.54 0 00-.54.54v10.92a.54.54 0 00.54.54h.54a.54.54 0 00.54-.54V6.54a.54.54 0 00-.54-.54h-.54zM24 6.54a.54.54 0 00-.54-.54h-1.08a.54.54 0 00-.54.54v9.82a.54.54 0 00.54.54h1.08a.54.54 0 00.54-.54V6.54z"></path></svg>
+                    </a>
+                </div>
+                 <a href="cv.pdf" download class="mt-8 inline-block bg-accent text-white px-6 py-3 rounded-lg hover:bg-accent-hover transition-transform transform hover:scale-105" data-translate-key="download_cv">
+                    Download CV
+                </a>
+            </div>
+            <div class="md:w-1/2 flex justify-center">
+                <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden shadow-2xl ring-4 ring-white">
+                    <img src="https://placehold.co/400x400/a3a3a3/ffffff?text=Your+Photo" 
+                         alt="A portrait of Pujan Thapa" 
+                         class="w-full h-full object-cover"
+                         onerror="this.onerror=null;this.src='https://placehold.co/400x400/e0e0e0/333333?text=Image+Not+Found';">
+                </div>
+            </div>
+        </section>
+
+        <!-- All other sections follow -->
+        <!-- The data-translate-key attribute should be added to all text elements -->
+
+    </main>
+
+    <!-- Footer -->
+    <footer class="bg-secondary-bg border-t border-secondary-border mt-16">
+        <div class="container mx-auto px-6 py-8 text-center text-secondary-text">
+            <div class="flex justify-center space-x-4 mb-4">
+                <!-- Social Media Links -->
+                 <a href="#" class="text-tertiary-text hover:text-accent" aria-label="GitHub"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.477 2 12.014c0 4.43 2.864 8.163 6.838 9.49.5.092.682-.217.682-.482 0-.237-.009-.868-.014-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.03-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.378.203 2.398.1 2.65.64.7 1.028 1.595 1.028 2.688 0 3.848-2.338 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.001 10.001 0 0022 12.014C22 6.477 17.523 2 12 2z" clip-rule="evenodd" /></svg></a>
+                <a href="#" class="text-tertiary-text hover:text-accent" aria-label="LinkedIn"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 01-2.063-2.065 2.064 2.064 0 112.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.225 0z" /></svg></a>
+                <a href="#" class="text-tertiary-text hover:text-accent" aria-label="Twitter"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.71v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" /></svg></a>
+                <a href="#" class="text-tertiary-text hover:text-accent" aria-label="Medium"><svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.94 6a.54.54 0 00-.54.54v10.92a.54.54 0 00.54.54h.54a.54.54 0 00.54-.54V6.54a.54.54 0 00-.54-.54h-.54zM24 6.54a.54.54 0 00-.54-.54h-1.08a.54.54 0 00-.54.54v9.82a.54.54 0 00.54.54h1.08a.54.54 0 00.54-.54V6.54z"></path></svg></a>
+            </div>
+            <p data-translate-key="footer_text">&copy; 2025 Pujan Thapa. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="script.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+</body>
+</html>
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pujan Thapa - Personal Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
