--- a/index.html
+++ b/index.html
@@ -98,9 +98,164 @@
             </div>
         </section>
 
-        <!-- All other sections follow -->
-        <!-- The data-translate-key attribute should be added to all text elements -->
+        <!-- Education Section -->
+        <section id="education" class="mt-24 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-12" data-translate-key="education_title">Education</h2>
+            <div class="relative border-l-2 timeline-border pl-10 max-w-3xl mx-auto">
+                <!-- Timeline Item 1 -->
+                <div class="mb-12">
+                    <div class="absolute -left-3.5 mt-1.5 w-6 h-6 timeline-dot rounded-full border-4"></div>
+                    <p class="text-sm text-tertiary-text" data-translate-key="ms_degree_date">2023 - 2025</p>
+                    <h3 class="text-xl font-semibold text-primary-text mt-1" data-translate-key="ms_degree_title">M.S. in Data Science</h3>
+                    <p class="mt-1 text-secondary-text" data-translate-key="ms_degree_uni">University of Naples Federico II, Italy</p>
+                    <p class="mt-2 text-secondary-text" data-translate-key="ms_degree_desc">Specialized in Computer Vision and NLP. Thesis on "Computer Vision for Autonomous Driving".</p>
+                </div>
+                <!-- Timeline Item 2 -->
+                <div class="mb-12">
+                    <div class="absolute -left-3.5 mt-1.5 w-6 h-6 timeline-dot rounded-full border-4"></div>
+                    <p class="text-sm text-tertiary-text" data-translate-key="bs_degree_date">2015 - 2019</p>
+                    <h3 class="text-xl font-semibold text-primary-text mt-1" data-translate-key="bs_degree_title">B.S. in Computer Science and Information Technology</h3>
+                    <p class="mt-1 text-secondary-text" data-translate-key="bs_degree_uni">Tribhuvan University, Nepal</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- Experience Section -->
+        <section id="experience" class="mt-24 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-12" data-translate-key="experience_title">Work Experience</h2>
+            <div class="relative border-l-2 timeline-border pl-10 max-w-3xl mx-auto">
+                <!-- Timeline Item 1 -->
+                <div class="mb-12">
+                    <div class="absolute -left-3.5 mt-1.5 w-6 h-6 timeline-dot rounded-full border-4"></div>
+                    <p class="text-sm text-tertiary-text" data-translate-key="omdena_date">May 2024 - July 2024</p>
+                    <h3 class="text-xl font-semibold text-primary-text mt-1" data-translate-key="omdena_title">ML Engineer, Omdena</h3>
+                    <p class="mt-2 text-secondary-text" data-translate-key="omdena_desc">Researched and developed solution during the timeframe of 8 weeks for Omdena Challenge from the data collection phase using Google Earth Engine, exploratory data analysis, model development using both supervised and unsupervised learning and model deployment in Streamlit Community Cloud.</p>
+                </div>
+                <!-- Timeline Item 2 -->
+                <div class="mb-12">
+                    <div class="absolute -left-3.5 mt-1.5 w-6 h-6 timeline-dot rounded-full border-4"></div>
+                    <p class="text-sm text-tertiary-text" data-translate-key="leapfrog_date">Dec 2020 - Aug 2023</p>
+                    <h3 class="text-xl font-semibold text-primary-text mt-1" data-translate-key="leapfrog_title">Software Engineer, Leapfrog Technology</h3>
+                    <p class="mt-2 text-secondary-text" data-translate-key="leapfrog_desc">Designed and deployed scalable Python-based ML, data engineering, and backend systems using AWS, Airflow, Docker, and CI/CD, with robust monitoring and automation. Optimized data pipelines, re-architected workflows, and improved test coverage with pytest, Selenium, and JMeter.</p>
+                </div>
+                 <!-- Timeline Item 3 -->
+                <div class="mb-12">
+                    <div class="absolute -left-3.5 mt-1.5 w-6 h-6 timeline-dot rounded-full border-4"></div>
+                    <p class="text-sm text-tertiary-text" data-translate-key="parentiv_date">May 2018 - Aug 2018</p>
+                    <h3 class="text-xl font-semibold text-primary-text mt-1" data-translate-key="parentiv_title">Software Engineer, Parentiv Inc.</h3>
+                    <p class="mt-2 text-secondary-text" data-translate-key="parentiv_desc">Researched and developed the Parentiv app’s backend architecture with Python (FastAPI), Google Cloud Firestore, and App Engine, integrating data from devices like Apple Watch and Google Home. Implemented NLP preprocessing with NLTK and spaCy, and ensured quality through unit and regression testing using pytest and JMeter.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects" class="mt-24 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-12" data-translate-key="projects_title">My Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Project Card 1 -->
+                <div class="bg-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/6366f1/ffffff?text=Project+1" alt="Project 1 Screenshot" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2" data-translate-key="project1_title">CREA3 (In Progress)</h3>
+                        <p class="text-secondary-text mb-4" data-translate-key="project1_desc">CREA3 stands for Conflict Resolution with Equitative Algorithms funded by the European Union (EU) in collaboration with University of Naples Federico II and other companies and universities.The CREA3 Project aims to modernize civil law procedures throughout the European Union, enabling citizens, legal professionals, judicial authorities, and, in particular, vulnerable users to achieve swifter, fairer, and non-discriminatory access to justice. Its strategic vision aims to augment the performances of its predecessors, CRE and CREA2, seamlessly introducing electronic signatures, authenticated videoconferences with automated evidentiary logging, and third, providing inclusive access measures that support individuals with limited digital literacy and cognitive capabilities.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Python</span>
+                            <span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full">FastAPI</span>
+                            <span class="bg-pink-100 text-pink-800 text-xs font-medium px-2.5 py-0.5 rounded-full">PostgreSQL</span>
+                        </div>
+                        <div class="flex justify-end space-x-4">
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_demo">Live Demo</a>
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_source">Source</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Card 2 -->
+                <div class="bg-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/ec4899/ffffff?text=Project+2" alt="Project 2 Screenshot" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2" data-translate-key="project2_title">Plant Disease Detection</h3>
+                        <p class="text-secondary-text mb-4" data-translate-key="project2_desc">Developed a plant disease detection system using image analysis. Leveraged YOLO for object detection, alongside techniques like Non-negative Matrix Factorization (NMF) and Fuzzy Clustering for feature extraction and classification.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Python</span>
+                            <span class="bg-yellow-100 text-yellow-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Roboflow</span>
+                            <span class="bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Tensorflow</span>
+                            <span class="bg-gray-100 text-gray-800 text-xs font-medium px-2.5 py-0.5 rounded-full">HuggingFace</span>
+                        </div>
+                        <div class="flex justify-end space-x-4">
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_demo">Live Demo</a>
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_source">Source</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project Card 3 -->
+                <div class="bg-card rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
+                    <img src="https://placehold.co/600x400/10b981/ffffff?text=Project+3" alt="Project 3 Screenshot" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2" data-translate-key="project3_title">Political Leaning Detection in News</h3>
+                        <p class="text-secondary-text mb-4" data-translate-key="project3_desc">Developed a web application to classify news articles as left-leaning, centrist, or right-leaning using fine-tuned BERT models. Enhanced model efficiency through quantization and Low-Rank Adaptation (LoRA). Deployed the solution using React JS, FastAPI and Docker, hosted on Azure Container Apps for real-time predictions, supporting media bias detection and analysis.</p>
+                         <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">React</span>
+                            <span class="bg-orange-100 text-orange-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Python (FastAPI)</span>
+                            <span class="bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Docker</span>
+                            <span class="bg-red-100 text-red-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Azure</span>
+                        </div>
+                        <div class="flex justify-end space-x-4">
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_demo">Live Demo</a>
+                            <a href="#" class="text-accent hover:underline" data-translate-key="project_source">Source</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Research Section -->
+        <section id="research" class="mt-24 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-12" data-translate-key="research_title">Research & Publications</h2>
+            <div class="max-w-3xl mx-auto space-y-8">
+                <!-- Research Item 1 -->
+                <div class="bg-card p-6 rounded-lg shadow-md">
+                    <h3 class="text-xl font-semibold text-primary-text" data-translate-key="research1_title">In Progress</h3>
+                </div>
+            </div>
+        </section>
+
+        <!-- Interests Section -->
+        <section id="interests" class="mt-24 fade-in-section">
+            <h2 class="text-3xl font-bold text-center mb-12" data-translate-key="interests_title">Interests & Pursuits</h2>
+            <div class="max-w-4xl mx-auto grid md:grid-cols-3 gap-8 text-center">
+                <div>
+                    <h3 class="text-xl font-semibold text-primary-text mb-3" data-translate-key="work_interests_title">Work Interests</h3>
+                    <p class="text-secondary-text" data-translate-key="work_interests_desc">Design Systems, AI/ML Architecture, Developer Tooling, Web Performance, and creating accessible digital experiences.</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-semibold text-primary-text mb-3" data-translate-key="research_interests_title">Research Interests</h3>
+                    <p class="text-secondary-text" data-translate-key="research_interests_desc">Human-Computer Interaction, 3D/4D Computer Vision, Information Visualization, and the societal impact of technology.</p>
+                </div>
+                <div>
+                    <h3 class="text-xl font-semibold text-primary-text mb-3" data-translate-key="personal_interests_title">Personal Interests</h3>
+                    <div class="flex justify-center flex-wrap gap-2 mt-3">
+                        <span class="bg-secondary-bg text-secondary-text px-3 py-1 rounded-full text-sm" data-translate-key="personal_interest1">Traveling</span>
+                        <span class="bg-secondary-bg text-secondary-text px-3 py-1 rounded-full text-sm" data-translate-key="personal_interest2">Hiking/Trekking</span>
+                        <span class="bg-secondary-bg text-secondary-text px-3 py-1 rounded-full text-sm" data-translate-key="personal_interest3">Bike Rides</span>
+                        <span class="bg-secondary-bg text-secondary-text px-3 py-1 rounded-full text-sm" data-translate-key="personal_interest4">Gaming</span>
+                        <span class="bg-secondary-bg text-secondary-text px-3 py-1 rounded-full text-sm" data-translate-key="personal_interest5">Cycling</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact" class="mt-24 text-center fade-in-section">
+            <div class="max-w-2xl mx-auto">
+                 <h2 class="text-3xl font-bold mb-4" data-translate-key="contact_title">Get In Touch</h2>
+                 <p class="text-lg text-secondary-text mb-8" data-translate-key="contact_desc">
+                    I'm always open to discussing new projects, creative ideas, or opportunities to be part of an ambitious vision. Feel free to reach out.
+                 </p>
+                 <a href="mailto:iampujan@outlook.com" class="inline-block bg-accent text-white text-lg font-semibold px-8 py-4 rounded-lg hover:bg-accent-hover transition-transform transform hover:scale-105" data-translate-key="contact_button">
+                    Say Hello
+                 </a>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
