--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
     </header>
 
     <main class="container mx-auto px-6 py-16">
-
         <!-- Hero Section -->
         <section id="hero" class="flex flex-col md:flex-row items-center justify-between space-y-8 md:space-y-0 md:space-x-12">
             <div class="md:w-1/2 text-center md:text-left">
@@ -157,7 +156,7 @@
                     <img src="https://placehold.co/600x400/6366f1/ffffff?text=Project+1" alt="Project 1 Screenshot" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2" data-translate-key="project1_title">CREA3 (In Progress)</h3>
-                        <p class="text-secondary-text mb-4" data-translate-key="project1_desc">CREA3 stands for Conflict Resolution with Equitative Algorithms funded by the European Union (EU) in collaboration with University of Naples Federico II and other companies and universities.The CREA3 Project aims to modernize civil law procedures throughout the European Union, enabling citizens, legal professionals, judicial authorities, and, in particular, vulnerable users to achieve swifter, fairer, and non-discriminatory access to justice. Its strategic vision aims to augment the performances of its predecessors, CRE and CREA2, seamlessly introducing electronic signatures, authenticated videoconferences with automated evidentiary logging, and third, providing inclusive access measures that support individuals with limited digital literacy and cognitive capabilities.</p>
+                        <p class="text-secondary-text mb-4" data-translate-key="project1_desc">CREA3 (Conflict Resolution with Equitative Algorithms) — An EU-funded project with the University of Naples Federico II and partners, focused on modernizing civil law procedures across Europe. Delivers faster, fairer, and more inclusive access to justice through electronic signatures, secure video conferencing, automated evidence logging, and support for users with limited digital literacy.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                             <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Python</span>
                             <span class="bg-green-100 text-green-800 text-xs font-medium px-2.5 py-0.5 rounded-full">FastAPI</span>
