--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="md:w-1/2 flex justify-center">
                 <div class="w-64 h-64 md:w-80 md:h-80 rounded-full overflow-hidden shadow-2xl ring-4 ring-white">
-                    <img src="https://placehold.co/400x400/a3a3a3/ffffff?text=Your+Photo" 
+                    <img src="./assets/pujan.jpg" 
                          alt="A portrait of Pujan Thapa" 
                          class="w-full h-full object-cover"
                          onerror="this.onerror=null;this.src='https://placehold.co/400x400/e0e0e0/333333?text=Image+Not+Found';">
