Update CV download link to My_CV.pdf

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path d="M13.54 12a6.8 6.8 0 01-6.77 6.82A6.8 6.8 0 010 12a6.8 6.8 0 016.77-6.82A6.8 6.8 0 0113.54 12zM20.94 6a.54.54 0 00-.54.54v10.92a.54.54 0 00.54.54h.54a.54.54 0 00.54-.54V6.54a.54.54 0 00-.54-.54h-.54zM24 6.54a.54.54 0 00-.54-.54h-1.08a.54.54 0 00-.54.54v9.82a.54.54 0 00.54.54h1.08a.54.54 0 00.54-.54V6.54z"></path></svg>
                     </a>
                 </div>
-                 <a href="cv.pdf" download class="mt-8 inline-block bg-accent text-white px-6 py-3 rounded-lg hover:bg-accent-hover transition-transform transform hover:scale-105" data-translate-key="download_cv">
+                 <a href="My_CV.pdf" download class="mt-8 inline-block bg-accent text-white px-6 py-3 rounded-lg hover:bg-accent-hover transition-transform transform hover:scale-105" data-translate-key="download_cv">
                     Download CV
                 </a>
             </div>
