--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#education" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_education_mob">Education</a>
             <a href="#research" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_research_mob">Research</a>
             <a href="#contact" class="block py-2 text-secondary-text hover:text-accent" data-translate-key="nav_contact_mob">Contact</a>
-            <a href="cv.pdf" download class="block mt-4 bg-accent text-white text-center px-4 py-2 rounded-lg hover:bg-accent-hover" data-translate-key="download_cv_mob">Download CV</a>
+            <a href="My_CV.pdf" download class="block mt-4 bg-accent text-white text-center px-4 py-2 rounded-lg hover:bg-accent-hover" data-translate-key="download_cv_mob">Download CV</a>
              <div class="flex items-center justify-center space-x-4 mt-4 pt-4 border-t border-secondary-border">
                 <div id="language-switcher-mob" class="flex items-center space-x-2">
                      <button class="lang-btn" data-lang="en">EN</button>
